flux/apps/base/apps/kgateway/operations/istio-port-exclusions.yaml
---
# Patch to exclude agentgateway admin ports from Istio sidecar interception
# agentgateway uses ports 15000, 15020, 15021 which conflict with Istio sidecar
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agentgateway
spec:
  template:
    metadata:
      annotations:
        traffic.sidecar.istio.io/excludeInboundPorts: "15000,15020,15021"
        traffic.sidecar.istio.io/excludeOutboundPorts: "15000,15020"
