flux/apps/base/apps/kgateway/operations/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: agentgateway-admin
  namespace: apps
spec:
  parentRefs:
    - name: agentgateway
  hostnames:
    - "agentgateway.kubegit.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: agentgateway-admin
          port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: agentgateway-admin
  namespace: apps
  labels:
    app.kubernetes.io/name: agentgateway
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: agentgateway
    app.kubernetes.io/name: agentgateway
    gateway.networking.k8s.io/gateway-name: agentgateway
  ports:
    - name: admin-15000
      port: 80
      targetPort: 15000
      protocol: TCP
