flux/apps/base/apps/kgateway/operations/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agentgateway-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: agentgateway.kubegit.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: agentgateway-admin
            port:
              number: 80
